fix carousel distortion for large screen

--- a/css/theme.css
+++ b/css/theme.css
@@ -66,7 +66,6 @@ body {
   left: 0;
   min-width: 100%;
   max-width: none;
-  height: 400px;
 }
 
 
